Use cluster_name for gcp bucket name & compute image +  Add cluster name + repo GitOps API endpoint for dashboard.
