# backend/docs/swagger.json
@@ -164,6 +164,41 @@
                 }
             }
         },
+        "/cluster/info": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get general cluster information including name and GitOps repository",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "cluster"
+                ],
+                "summary": "Get cluster info",
+                "responses": {
+                    "200": {
+                        "description": "cluster_name, gitops_repo_owner, gitops_repo_name, gitops_branch",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/gcp/bucket": {
             "post": {
                 "security": [
@@ -872,7 +907,7 @@
                                 "nodes": {
                                     "type": "array",
                                     "items": {
-                                        "$ref": "#/definitions/services.NodeConfigUpdate"
+                                        "$ref": "#/definitions/node.NodeConfigUpdate"
                                     }
                                 }
                             }
@@ -941,8 +976,7 @@
                     "200": {
                         "description": "Returns provisioned count and nodes array",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/models.NodeProvisionRequest"
                         }
                     },
                     "400": {
@@ -2278,11 +2312,13 @@
             "type": "string",
             "enum": [
                 "pending",
+                "provisioning",
                 "active",
                 "failed"
             ],
             "x-enum-varnames": [
                 "StatusPending",
+                "StatusProvisioning",
                 "StatusActive",
                 "StatusFailed"
             ]
@@ -2308,7 +2344,7 @@
                 "RoleViewer"
             ]
         },
-        "services.NodeConfigUpdate": {
+        "node.NodeConfigUpdate": {
             "type": "object",
             "properties": {
                 "id": {
